<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/Agırlık_Vize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="@string/Ağırlık1"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/vize_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Agırlık_Final"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="@string/Ağırlık1"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/Final_not"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vize_2" />

    <EditText
        android:id="@+id/Final_not"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="@string/Final"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonHesapla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Agırlık_Final" />

    <EditText
        android:id="@+id/vize_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="@string/Vize1"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/vize_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Agırlık_Vize" />

    <EditText
        android:id="@+id/vize_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="@string/Vize2"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/Agırlık_Final"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vize_1" />

    <Button
        android:id="@+id/buttonHesapla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginBottom="34dp"

        android:text="@string/buttonHesapla"
        app:layout_constraintBottom_toTopOf="@+id/sonuçText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Final_not" />

    <TextView
        android:id="@+id/sonuçText"
        android:layout_width="247dp"
        android:layout_height="0dp"
        android:layout_marginStart="71dp"
        android:layout_marginBottom="67dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/SonucText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHesapla" />

</androidx.constraintlayout.widget.ConstraintLayout>